--- a/dashboard.html
+++ b/dashboard.html
@@ -10,15 +10,17 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Dashboard</h1>
-        <div class="info">
-            <p>Name : <span id="username"></span></p>
-            <p>Total Income : ₹ <span id="total-income"></span></p>
-            <p>Total Expense : ₹ <span id="total-expense"></span></p>
-            <p>Total Savings : ₹ <span id="total-savings"></span></p>
+    <div class="center">
+        <div class="container">
+            <h1>Dashboard</h1>
+            <div class="info">
+                <p>Name : <span id="username"></span></p>
+                <p>Total Income : ₹ <span id="total-income"></span></p>
+                <p>Total Expense : ₹ <span id="total-expense"></span></p>
+                <p>Total Savings : ₹ <span id="total-savings"></span></p>
+            </div>
+            <button onclick="logout()">Logout</button>
         </div>
-        <button onclick="logout()">Logout</button>
     </div>
     <script src="dashboard.js"></script>
 </body>
