--- a/income.html
+++ b/income.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Income Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="income.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Income Page</h1>
         <div>Total Income: ₹ <span id="total-income">0</span></div>
         <h2>Add Income</h2>
         <form id="income-form">
-    <label for="source">Source:</label>
-    <input type="text" id="source" name="source" required><br>
-    <label for="amount">Amount:</label>
-    <input type="number" id="amount" name="amount" required><br>
-    <button type="submit" id="add-income">Add Income</button>
-</form>
+            <label for="source">Source:</label>
+            <input type="text" id="source" name="source" required><br>
+            <label for="amount">Amount:</label>
+            <input type="number" id="amount" name="amount" required><br>
+            <button type="submit" id="add-income">Add Income</button>
+            <button type="button" id="clear-all">Clear All</button>
+        </form>
         <h2>Income History</h2>
         <ul id="income-history"></ul>
         <button id="show-more-income" style="display:none;">Show More</button>
     </div>
     <script src="income.js"></script>
 </body>
+
 </html>
