--- a/income.html
+++ b/income.html
@@ -16,9 +16,9 @@
         <h2>Add Income</h2>
         <form id="income-form">
             <label for="source">Source:</label>
-            <input type="text" id="source" name="source" required><br>
+            <input type="text" id="source" name="source" required><br><br> <!-- Added one line space after this input -->
             <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required><br>
+            <input type="number" id="amount" name="amount" required><br><br> <!-- Added one line space after this input -->
             <button type="submit" id="add-income">Add Income</button>
             <button type="button" id="clear-all">Clear All</button>
         </form>
