--- a/expense.html
+++ b/expense.html
@@ -6,24 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="expense.css">
 </head>
 
-<body style="background-image: url('expense.gif'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+<body>
     <div class="container">
         <h1>Expense Page</h1>
-        <div>Total Expenses: ₹ <span id="total-expenses">0</span></div>
+        <div>Total Expense: ₹ <span id="total-expense">0</span></div>
         <h2>Add Expense</h2>
         <form id="expense-form">
             <label for="source">Source:</label>
-            <input type="text" id="source" name="source" required><br>
+            <input type="text" id="source" name="source" required><br><br> <!-- Added one line space after this input -->
             <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required><br>
+            <input type="number" id="amount" name="amount" required><br><br> <!-- Added one line space after this input -->
             <button type="submit" id="add-expense">Add Expense</button>
+            <button type="button" id="clear-all">Clear All</button>
         </form>
         <h2>Expense History</h2>
         <ul id="expense-history"></ul>
-        <button id="show-more-expense" class="show-more" style="display:none;">Show More</button>
+        <button id="show-more-expense" style="display:none;">Show More</button>
     </div>
     <script src="expense.js"></script>
 </body>
