--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,7 @@
                 <p>Total Expense : ₹ <span id="total-expense"></span></p>
                 <p>Total Savings : ₹ <span id="total-savings"></span></p>
             </div>
+            <button onclick="deleteAccount()">Delete Account</button>
             <button onclick="logout()">Logout</button>
         </div>
     </div>
