--- a/dashboard.html
+++ b/dashboard.html
@@ -19,8 +19,8 @@
                 <p>Total Expense : ₹ <span id="total-expense"></span></p>
                 <p>Total Savings : ₹ <span id="total-savings"></span></p>
             </div>
+            <button id="logout">Logout</button>
             <button onclick="deleteAccount()">Delete Account</button>
-            <button onclick="logout()">Logout</button>
         </div>
     </div>
     <script src="dashboard.js"></script>
