--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
                 <p>Total Savings : ₹ <span id="total-savings"></span></p>
             </div>
             <button id="logout">Logout</button>
-            <button onclick="deleteAccount()">Delete Account</button>
+            <button id="delete-account">Delete Account</button>
         </div>
     </div>
     <script src="dashboard.js"></script>
