--- a/savings.html
+++ b/savings.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +7,13 @@
     <title>Savings Page</title>
     <link rel="stylesheet" href="savings.css">
 </head>
-
 <body>
     <div class="container">
         <h1>Savings Page</h1>
         <div>Total Savings: <span id="total-savings"></span></div>
-        <h2>Last 5 Transactions</h2>
+        <h2>Transaction History</h2>
         <ul id="savings-history"></ul>
     </div>
     <script src="savings.js"></script>
 </body>
-
 </html>
