--- a/savings.html
+++ b/savings.html
@@ -13,6 +13,7 @@
         <div>Total Savings: <span id="total-savings"></span></div>
         <h2>Transaction History</h2>
         <ul id="savings-history"></ul>
+        <button id="show-more-savings" style="display:none;">Show More</button>
     </div>
     <script src="savings.js"></script>
 </body>
