--- a/savings.html
+++ b/savings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,16 @@
     <title>Savings Page</title>
     <link rel="stylesheet" href="savings.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Savings Page</h1>
-        <div>Total Savings: <span id="total-savings"></span></div>
+        <div>Total Savings: ₹ <span id="total-savings"></span></div>
         <h2>Transaction History</h2>
         <ul id="savings-history"></ul>
-        <button id="show-more-savings" style="display:none;">Show More</button>
+        <button id="show-more">Show More</button>
     </div>
     <script src="savings.js"></script>
 </body>
+
 </html>
