--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <div class="content">
         <h1>About</h1>
         <p>Our website aims to help users track and understand their income, expenses, and savings effectively.</p>
-        <p>Developed by Vishnupriya, Amrutha, and Saana, three BTech CSE students from GISAT College, this website serves as their mini project.</p>
+        <p>Developed by Arun K Biju, a BTechnstudent, this website serves as my mini project.</p>
         <p>The user data is collected and stored locally on the browser's localStorage only.</p>
         <p>Credits to the creators and GitHub for hosting this website.</p>
         <p>We are continuously working to add more features to enhance your experience.</p>
