--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
 
 <body>
     <h1>Contact Us</h1>
-    <button onclick="makeCall()">Call</button>
-    <button onclick="sendEmail()">Email</button>
+    <button onclick="makeCall()">Call Us</button>
+    <button onclick="sendEmail()">Email Us</button>
 
     <script>
         function makeCall() {
